bump cap version and refactor registry further